Bug 1068981 - Acquire monitor before calling WakeUp. r=roc a=khuey